--- a/lesson-3/connector/angular.json
+++ b/lesson-3/connector/angular.json
@@ -28,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/assets/styles/styles.less",
+              "src/assets/styles/main.css"
             ],
             "scripts": []
           },
@@ -96,7 +97,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/assets/styles/styles.less",
+              "src/assets/styles/main.css"
             ],
             "scripts": []
           }
